tests/semantic/invalid/66_i10_grandchild_override_mismatch.hulk
type GrandParent() {
    greet() => "hello";
}
type Parent( ) inherits GrandParent() {}
type Child( ) inherits Parent() {
    greet() => 1;
}
print(0);
